alignemnt fix

--- a/src/app/components/animated-sticker/animated-sticker.component.scss
+++ b/src/app/components/animated-sticker/animated-sticker.component.scss
@@ -84,31 +84,19 @@ body {
     border-radius: inherit;
     transform: translateZ(1.5vmin);
   }
-}
-@media screen and (max-width: 1024px) {
-  #app {
-    &:before {
-      border-radius: 2vmin;
-    }
-  }
-}
-
-.papers {
-  width: 60vmin;
-  height: 19vmin;
-  background: white;
-  max-width: 700px;
-  max-height: 230px;
   > .stickerID {
     position: absolute;
     bottom: 10px;
-    left: -55px;
-    background: inherit;
+    left: 10px;
+    background: transparent;
     font-weight: 600;
     height: 20%;
     width: 20%;
-    font-size: 32px;
-    color: red;
+    background-image: url("../../../assets/images/1.svg");
+    background-repeat: no-repeat;
+    background-size: contain;
+    transform: translateZ(3vmin);
+
     &:before {
       position: absolute;
       transform: translateZ(3vmin);
@@ -119,6 +107,14 @@ body {
       left: 0;
       transform: translateZ(1.5vmin);
     }
+  }
+
+  .papers {
+    width: 60vmin;
+    height: 19vmin;
+    background: white;
+    max-width: 700px;
+    max-height: 230px;
   }
   > .nfcChip {
     margin: auto;
@@ -141,6 +137,17 @@ body {
       left: 0;
       transform: translateZ(1.5vmin);
     }
+  }
+}
+
+@media screen and (max-width: 1024px) {
+  #app {
+    &:before {
+      border-radius: 2vmin;
+    }
+  }
+  .papers {
+    font-size: 12px !important;
   }
 }
 
